--- a/4.linux-operating-system/4.1-choosing-operating-system.md
+++ b/4.linux-operating-system/4.1-choosing-operating-system.md
@@ -1,1 +1,34 @@
 # Choosing an OS
+
+**Weight 1**\
+Key knowledge areas
+
+• Differences between Windows, OS X and Linux
+• Distribution life cycle management
+
+Partial list of the used files, terms and utilities
+• GUI versus command line, desktop configuration
+• Maintenance cycles, beta and stable
+
+---
+
+## Operating System
+
+- OS allows applications to run on a computer and contains drivers to access computer hardware
+- `uname -r` : kernel version
+- `uname -s` : os name
+
+- Enterprise Grade Linux Distributions
+  - Red Hat Enterprise Linux
+  - CentOS
+  - SUSE Linux Enterprise Server
+  - Debian GNU/Linux
+  - Ubuntu LTS
+- Consumer Grade Linux Distributions
+  - Fedora
+  - Ubuntu non-LTS
+  - openSUSE
+- Experimental and Hacker Linux Distributions
+  - Arch
+  - Gentoo
+  
