--- a/4.linux-operating-system/4.4-your-computer-on-the-network.md
+++ b/4.linux-operating-system/4.4-your-computer-on-the-network.md
@@ -1,1 +1,69 @@
 # Your computer on the Network
+
+**Weight 2**\
+Key knowledge areas
+
+• Internet, network, routers
+• Querying DNS client configuration
+• Querying network configuration
+
+Partial list of the used files, terms and utilities
+
+• route, ip route show
+• ifconfig, ip addr show
+• netstat, ss
+• /etc/resolv.conf, /etc/hosts
+• IPv4, IPv6
+• ping
+• host
+
+---
+
+- **Link Layer**
+Handles the communication between directly connected devices.
+- **Network Layer**
+  - Handles routing outside of individual networks and the unique addressing of devices beyond a
+single link layer network.
+  - packet switching. Data is grouped up with a header, which contains information about where the information is coming from and where it’s going to.
+- **Application Layer**
+Enables individual programs to connect to each other.
+
+## Link Layer Networking
+
+- use MAC address to identify network cards
+- `ip link show` display network interfaces / MAC addresses
+
+## IP v4
+
+- 32-bit addresses for routing
+- `11000000.10101000.00000000.00000001` =  192.168.0.1 :  4 digits of 8 bit = 32-Bit
+- Now for this IP address, the subnet mask sets each bit which belongs to the network part to 1 and
+each bit that belongs to the host part to 0
+- Subnet mask :  255.255.255.0 = 11111111.11111111.11111111.00000000 = 192.168.0.1/24 : allow 192.168.0.0 to 192.168.0.255
+- Subnet mask CIDR notation = 192.168.0.1/24
+- Private Network:
+  - 10.0.0.0/8
+  - 172.16.0.0/12
+  - 192.168.0.0/16
+- Network Address Translation (NAT) : map internal adresses to single external IP or external IP to internal addresses
+- DHCP (Dynamic Host Configuration Protocol) for automatic IP configuration
+- `ip addr add` add manually a new ip eg.: `sudo ip addr add 192.168.0.5/255.255.255.0 dev ens33`
+- `ip addr show` to see information
+- `ip route show` lists the current IPv4 routing table
+- `sudo ip route add default via 192.168.0.1` add a default route via router 192.168.0.1
+
+## IP v6
+
+- `2001:0db8:0000:abcd:0000:0000:0000:7334` 8 groups of 16-bit (hexa :0 to f) = 128 bits
+
+## IP v6 Prefix
+
+- The first 64 bits of an IPv6 address are known as the **routing prefix**
+
+
+
+
+
+
+
+
