end of chapter 4

--- a/4.linux-operating-system/4.4-your-computer-on-the-network.md
+++ b/4.linux-operating-system/4.4-your-computer-on-the-network.md
@@ -59,11 +59,61 @@ each bit that belongs to the host part to 0
 ## IP v6 Prefix
 
 - The first 64 bits of an IPv6 address are known as the **routing prefix**
+- Prefix is used by routers to **determine which network a device belongs**
+- ISPs usually hand out /48 or /58 prefixes to their customers, leaving them 16 or 8 bits for their internal subnetting.
+- There are three major prefix types in IPv6:
+  - **Global Unique Address**
+Wherein the prefix is assigned from the blocks reserved for global addresses. These addresses
+ware valid in the entire internet.
+  - **Unique Local Address**
+May not be routed in the internet. They may, however, be routed internally within an
+organization. These addresses are used within a network to ensure the devices still have an
+address even when there is no internet connection. They are the equivalent of the private
+address ranges from IPv4. The first 8 bits are always fc or fd, followed by 40 randomly
+generated bits.
+  - **Link Local Address**
+Are only valid on a particular link. Every IPv6 capable network interface has one such address,
+starting with fe80. These addresses are used internally by IPv6 to request additional addresses
+using automatic configuration and to find other computers on the network using the Neighbor
+Discovery protocol.
 
+## IPv6 Interface Identifier
 
+- the interface identifier is used to enumerate the devices within a network. The last 64 bits in an IPv6 address form the interface identifier, just like the last bits of an IPv4 address
 
+## IPv6 Address Configuration
 
+- **(SLAAC)** Stateless Address Autoconfiguration. Use the new NDP (Neighbor Discovery Protocol) which allows devices to find each other and request information regarding a network.
+- **DHCPv6** updated DHCP for IPv6
 
+- `sudo ip addr add 2001:db8:0:abcd:0:0:0:7334/64 dev ens33`
 
+## DNS
 
+- translate domain name to ip
+- DNS is set in `/etc/resolv.conf`
+- `/etc/host` used first then after DNS server
+- `host` to perform a lookup - `dig` for more info
+- DNS records:
+  - Textual data :TXT
+  - Reverse IP address lookup : PTR
+  - Translet Domain name to IP : A
+  - Domain relies on another domain : CNAME
+  - Mail Server : MX
 
+## Sockets
+
+- communication endpoint provided by an application. Protocol + port
+- **Unix Sockets**
+Which connect processes running on the same device.
+- **UDP (User Datagram Protocol) Sockets**
+Which connect applications using a protocol which is fast but not resilient.
+- **TCP (Transmission Control Protocol) Sockets**
+Which are more reliable than UDP sockets and, for example, confirm the receipt of data.
+
+- `ss` to list open sockets
+  - `-p` list processes
+  - `-s` summarize
+  - `-t` for tcp `-u` for udp
+  - `-l` only listening socket
+  - `-4` or `-6` for filter IPv4 / IPv6
