--- a/5.security-and-file-permissions/5.3-file-permissions-and-ownership.md
+++ b/5.security-and-file-permissions/5.3-file-permissions-and-ownership.md
@@ -1,1 +1,114 @@
 # Managing File Permissions and Ownership
+
+**Weight 2**\
+Key knowledge areas
+
+• File and directory permissions and ownership
+Partial list of the used files, terms and utilities
+• ls -l, ls -a
+• chmod, chown
+
+---
+
+## Understanding Filetypes
+
+- `-` (normal file)
+A file can contain data of any kind. Files can be modified, moved, copied and deleted.
+- `d` (directory)
+A directory contains other files or directories and helps to organize the file system. Technically,
+directories are a special kind of file.
+- `l` (soft link)
+This “file” is a pointer to another file or directory elsewhere in the filesystem.
+- `b` (block device)
+This file stands for a virtual or physical device, usually disks or other kinds of storage devices.
+For example, the first hard disk in the system might be represented by /dev/sda.
+- `c` (character device)
+This file stands for a virtual or physical device. Terminals (like the main terminal on
+/dev/ttyS0) and serial ports are common examples of character devices.
+- `s` (socket)
+Sockets serve as “conduits” passing information between two programs.
+
+## Permissions on Files
+
+- `r`
+Stands for read and has an octal value of 4 (don’t worry, we will discuss octals shortly). This
+means permission to open a file and read its contents.
+- `w`
+Stands for write and has an octal value of 2. This means permission to edit or delete a file.
+- `x`
+Stands for execute and has an octal value of 1. This means that the file can be run as an
+executable or script.
+
+## Permissions on Directories
+
+- `r`
+Stands for read and has an octal value of 4. This means permission to read the directory’s
+contents, like filenames. But it does not imply permission to read the files themselves.
+- `w`
+Stands for write and has an octal value of 2. This means permission to create or delete files in a
+directory, or change their names, permissions and owners. If a user has the write permission
+on a directory, the user can change permissions of any file in the directory, even if the user has
+no permissions on the file or if the file is owned by another user.
+- `x`
+Stands for execute and has an octal value of 1. This means permission to enter a directory, but
+not to list its files (for that, the r permission is needed).
+
+- **permissions are specified in sequence: first for the owner of the file, then for
+the owning group, and then for other users.**
+
+## Modifying File Permissions
+
+- `chmod` (symbolic mode)
+  - `-u` : user , `-g` : group `-o` : others
+  - `+` : add, `-` : remove, `=` : set exactly
+  - `-R` for subdirectories
+  - `chmod u+rwx,g-x,o=rw text.txt` => `-rwxr--rw-`
+- `chmod` (numeric mode)
+  - r=4, w=2, x=1 : a permission of `rwx` would be 7 (4+2+1) and `r-x` eq. 5 (4+0+1).
+  - `chmod 660 text.txt` eq. `-rw-rw----`
+
+## Modifying File Ownership
+
+- `chown username:groupname filename`
+  - `chown :groupname filename` change only group
+  - `chown username filename` change user
+- `chgrp` change group
+
+## Querying Groups
+
+- `groups $USER` group info for this user
+- `groups` : all system groups
+- `sudo groupmems -g groupname -l` : show users of this group
+
+## Special Permissions
+
+### Sticky Bit
+
+- `t` or`1` on **other** permissions
+- Only directories
+- prevents users from removing or renaming a file in a directory unless they own them
+- Directories show a t replacing the x for others: `drwxr-xr-t`
+- in numeric mode : `chmod 1755 Another_Directory` eq. `drwxr-xr-t`
+
+### Set GID
+
+- `s` or `2` on **group** permisions
+- on files AND directories
+- On executable files, it will grant the process resulting from executing the file access to
+the privileges of the group who owns the file
+- When applied to directories, it will make every file or directory created under it inherit the group from the parent directory.
+- `s` replacing the `x` on the group permissions
+- `-rwxr-sr-x` use `chmod g+s test.sh`
+- numeric mode : octal value : `2`
+- `chmod 2755` eq. `-rwxr-sr-x`
+
+### Set UID
+
+- Octal value : `4`
+- `s` on **user** permissions
+- same as SGID but the process run with the privileges of the **user who owns the file**
+- only applies to **files**
+- replace `x` on the user permissions
+- `chmod 4755` eq. `-rwsr-xr-x`
+- `chmod 6755` eq `-rwsr-sr-x` : SUID + SGID
+- `chmod 0755` to remove special permissions
