--- a/5.security-and-file-permissions/5.4-special-directories-and-files.md
+++ b/5.security-and-file-permissions/5.4-special-directories-and-files.md
@@ -1,1 +1,48 @@
 # Special Directories and Files
+
+**Weight 1**\
+Key knowledge areas
+
+• Using temporary files and directories
+• Symbolic links
+
+Partial list of the used files, terms and utilities
+
+• /tmp/, /var/tmp/ and Sticky Bit
+• ls -d
+• ln -s
+
+---
+
+## Temporary Files
+
+- **/tmp**
+According to the FHS, programs should not assume that files written here will be preserved
+between invocations of a program. The recommendation is that this directory be cleared (all
+files erased) during system boot-up, although this is not mandatory.
+- **/var/tmp**
+Another location for temporary files, but this one should not be cleared during the system boot-
+up, i.e. files stored here will usually persist between reboots.
+- **/run**
+This directory contains run-time variable data used by running processes, such as process
+identifier files (.pid). Programs that need more than one run-time file may create
+subdirectories here. This location must be cleared during system boot-up. The purpose of this
+directory was once served by /var/run, and on some systems /var/run may be a symbolic
+link to /run.
+
+## Links
+
+- **Symbolic links**
+Also called soft links, they point to the path of another file. If you delete the file the link points to (called target) the link will still exist, but it “stops working”, as it now points to “nothing”.
+- **Hard links**
+Think of a hard link as a second name for the original file. They are not duplicates, but instead are an additional entry in the file system pointing to the same place (inode) on the disk.
+
+### Working with Hard Links
+
+- `ln TARGET LINK_NAME` create hard link `ln target.txt /home/carol/Documents/hardlink`
+- If you change the contents of one of the names, the contents of all other names pointing to that file change since all these names point to the very same data. If you delete one of the names, the other names will still work.
+- `ls -li` show same inode number
+
+### Symbolic links
+
+- `ln -s /home/carol/Documents/original.txt softlink`
