--- a/3.the-power-of-command-line/3.1-archiving.md
+++ b/3.the-power-of-command-line/3.1-archiving.md
@@ -2,14 +2,16 @@
 
 **Weight 2**\
 Key knowledge areas
-• Files, directories
-• Archives, compression
+
+- Files, directories
+- Archives, compression
 
 Partial list of the used files, terms and utilities
-• tar
-• Common tar options
-• gzip, bzip2, xz
-• zip, unzip
+
+- tar
+- Common tar options
+- gzip, bzip2, xz
+- zip, unzip
 
 ---
 
