--- a/3.the-power-of-command-line/3.2-searching-extracting-data.md
+++ b/3.the-power-of-command-line/3.2-searching-extracting-data.md
@@ -2,17 +2,19 @@
 
 **Weight 3**\
 Key Knowledge Areas
-• Command line pipes
-• I/O redirection
-• Basic Regular Expressions using `.` `[ ]` `*` and `?`
+
+- Command line pipes
+- I/O redirection
+- Basic Regular Expressions using `.` `[ ]` `*` and `?`
 
 Partial list of the used files, terms and utilities
-• `grep`
-• `less`
-• `cat`, `head`, `tail`
-• `sort`
-• `cut`
-• `wc`
+
+- `grep`
+- `less`
+- `cat`, `head`, `tail`
+- `sort`
+- `cut`
+- `wc`
 
 ---
 
