--- a/3.the-power-of-command-line/3.3-scripts.md
+++ b/3.the-power-of-command-line/3.3-scripts.md
@@ -3,18 +3,18 @@
 **Weight 4**\
 Key knowledge areas
 
-• Basic shell scripting
-• Awareness of common text editors (vi and nano)
+- Basic shell scripting
+- Awareness of common text editors (vi and nano)
 
 Partial list of the used files, terms and utilities
 
-• #! (shebang)
-• /bin/bash
-• Variables
-• Arguments
-• for loops
-• echo
-• Exit status
+- #! (shebang)
+- /bin/bash
+- Variables
+- Arguments
+- for loops
+- echo
+- Exit status
 
 ---
 
