--- a/4.linux-operating-system/4.1-choosing-operating-system.md
+++ b/4.linux-operating-system/4.1-choosing-operating-system.md
@@ -3,12 +3,13 @@
 **Weight 1**\
 Key knowledge areas
 
-• Differences between Windows, OS X and Linux
-• Distribution life cycle management
+- Differences between Windows, OS X and Linux
+- Distribution life cycle management
 
 Partial list of the used files, terms and utilities
-• GUI versus command line, desktop configuration
-• Maintenance cycles, beta and stable
+
+- GUI versus command line, desktop configuration
+- Maintenance cycles, beta and stable
 
 ---
 
