--- a/4.linux-operating-system/4.2-understanding-computer-hardware.md
+++ b/4.linux-operating-system/4.2-understanding-computer-hardware.md
@@ -3,13 +3,13 @@
 **Weight 2**\
 Key Knowledge Areas
 
-• Hardware
+- Hardware
 
 Partial list of the used files, terms and utilities
 
-• Motherboards, processors, power supplies, optical drives, peripherals
-• Hard drives, solid state disks and partitions, /dev/sd*
-• Drivers
+- Motherboards, processors, power supplies, optical drives, peripherals
+- Hard drives, solid state disks and partitions, /dev/sd*
+- Drivers
 
 ---
 
