--- a/4.linux-operating-system/4.3-where-data-is-stored.md
+++ b/4.linux-operating-system/4.3-where-data-is-stored.md
@@ -3,18 +3,18 @@
 **Weight 3**\
 Key knowledge areas
 
-• Programs and configuration
-• Processes
-• Memory addresses
-• System messaging
-• Logging
+- Programs and configuration
+- Processes
+- Memory addresses
+- System messaging
+- Logging
 
 Partial list of the used files, terms and utilities
 
-• ps, top, free
-• syslog, dmesg
-• /etc/, /var/log/
-• /boot/, /proc/, /dev/, /sys/
+- ps, top, free
+- syslog, dmesg
+- /etc/, /var/log/
+- /boot/, /proc/, /dev/, /sys/
 
 ---
 
@@ -69,13 +69,13 @@ about the user.
 System-wide configuration file for Bash.
 - **shadow**
 Encrypted file for user passwords.
-• Initialization files ending in rc:
+- Initialization files ending in rc:
 - **bash.bashrc**
 System-wide .bashrc file for interactive bash shells.
 - **nanorc**
 Sample initialization file for GNU nano (a simple text editor that normally ships with any
 distribution).
-• Files ending in .conf:
+- Files ending in .conf:
 - **resolv.conf**
 Config file for the resolver — which provide access to the Internet Domain Name System
 (DNS).
