--- a/4.linux-operating-system/4.4-your-computer-on-the-network.md
+++ b/4.linux-operating-system/4.4-your-computer-on-the-network.md
@@ -3,19 +3,19 @@
 **Weight 2**\
 Key knowledge areas
 
-• Internet, network, routers
-• Querying DNS client configuration
-• Querying network configuration
+- Internet, network, routers
+- Querying DNS client configuration
+- Querying network configuration
 
 Partial list of the used files, terms and utilities
 
-• route, ip route show
-• ifconfig, ip addr show
-• netstat, ss
-• /etc/resolv.conf, /etc/hosts
-• IPv4, IPv6
-• ping
-• host
+- route, ip route show
+- ifconfig, ip addr show
+- netstat, ss
+- /etc/resolv.conf, /etc/hosts
+- IPv4, IPv6
+- ping
+- host
 
 ---
 
