--- a/5.security-and-file-permissions/5.1-basic-security-and-users.md
+++ b/5.security-and-file-permissions/5.1-basic-security-and-users.md
@@ -3,14 +3,14 @@
 **Weight 2**\
 Key knowledge areas
 
-• Root and standard users
-• System users
+- Root and standard users
+- System users
 
 Partial list of the used files, terms and utilities
 
-• /etc/passwd, /etc/shadow, /etc/group
-• id, last, who, w
-• sudo, su
+- /etc/passwd, /etc/shadow, /etc/group
+- id, last, who, w
+- sudo, su
 
 ---
 
