--- a/5.security-and-file-permissions/5.2-creating-users-and-groups.md
+++ b/5.security-and-file-permissions/5.2-creating-users-and-groups.md
@@ -3,14 +3,14 @@
 **Weight 2**\
 Key knowledge areas
 
-• User and group commands
-• User IDs
+- User and group commands
+- User IDs
 
 Partial list of the used files, terms and utilities
 
-• /etc/passwd, /etc/shadow, /etc/group, /etc/skel/
-• useradd, groupadd
-• passwd
+- /etc/passwd, /etc/shadow, /etc/group, /etc/skel/
+- useradd, groupadd
+- passwd
 
 ---
 
