--- a/5.security-and-file-permissions/5.3-file-permissions-and-ownership.md
+++ b/5.security-and-file-permissions/5.3-file-permissions-and-ownership.md
@@ -3,10 +3,10 @@
 **Weight 2**\
 Key knowledge areas
 
-• File and directory permissions and ownership
+- File and directory permissions and ownership
 Partial list of the used files, terms and utilities
-• ls -l, ls -a
-• chmod, chown
+- ls -l, ls -a
+- chmod, chown
 
 ---
 
