--- a/5.security-and-file-permissions/5.4-special-directories-and-files.md
+++ b/5.security-and-file-permissions/5.4-special-directories-and-files.md
@@ -3,14 +3,14 @@
 **Weight 1**\
 Key knowledge areas
 
-• Using temporary files and directories
-• Symbolic links
+- Using temporary files and directories
+- Symbolic links
 
 Partial list of the used files, terms and utilities
 
-• /tmp/, /var/tmp/ and Sticky Bit
-• ls -d
-• ln -s
+- /tmp/, /var/tmp/ and Sticky Bit
+- ls -d
+- ln -s
 
 ---
 
