--- a/5.security-and-file-permissions/5.1-basic-security-and-users.md
+++ b/5.security-and-file-permissions/5.1-basic-security-and-users.md
@@ -123,7 +123,7 @@ and hash string stored.
 - **$1$0123456789ABC$012…**
 An “enabled” account, with a hash function, hash salt and hash string stored.
 
-### The File /etc/gshadow
+### /etc/gshadow
 
 - /etc/gshadow is a file readable only by root and by users with root privileges that contains
 encrypted passwords for groups, each on a separate line:
