--- a/5.security-and-file-permissions/5.2-creating-users-and-groups.md
+++ b/5.security-and-file-permissions/5.2-creating-users-and-groups.md
@@ -72,4 +72,5 @@ Unlock the user account (it removes the exclamation mark).
 Output information about the password status for a specific account.
 
 `useradd -u 1035 -g 1020 -G web_admin,db_admin carol`\
-`id carol uid=1035(carol) gid=1020(sys_admin) groups=1020(sys_admin),1021(web_admin),1022(db_admin)`
+`id carol`\
+`uid=1035(carol) gid=1020(sys_admin) groups=1020(sys_admin),1021(web_admin),1022(db_admin)`
