--- a/1.linux_community/1.1-linux_evolution.md
+++ b/1.linux_community/1.1-linux_evolution.md
@@ -19,7 +19,7 @@ Partial list of the used files, terms and utilities
 
 ## Linux
 
-- created by Linus Torvalds in 1991  
+- created by Linus Torvalds in 1991  - written in C language
 - Inspired by UNIX - AT&T 1970s  
 - 'Unix-like' for x86 computers  
 - No Unix code in Linux but same principles & ideas
