--- a/2.finding_your_way_on_linux/2.2-cli_help.md
+++ b/2.finding_your_way_on_linux/2.2-cli_help.md
@@ -27,6 +27,8 @@ Partial list of the used files, terms and utilities
 - organized in 8 categories
 - use less by `default`
 - search with `/` + `n` for next matches
+- `man -k them` search theme in all man pages = a propos
+- `man -w command` display location of the man page
 
 ## Info Pages
 
