--- a/5.security-and-file-permissions/5.1-basic-security-and-users.md
+++ b/5.security-and-file-permissions/5.1-basic-security-and-users.md
@@ -25,6 +25,7 @@ Partial list of the used files, terms and utilities
 - `last` last user logged 
   - pts : via distant terminal (remote via network)
   - tty : via console (directly on PC)
+- `lastb` : last login failed
 - `who` and `w` : list active users
 
 ## Access control files
